test/fail/entity-constraint-module.app
//Properties are defined multiple times - name
application test

imports module/entity-constraint-in-module

 define page root() {
    "default body"
  }
